# UAV-optimal-mission-planner-and-resource-management

./: CMakeLists.txt
lin/mat/: A.txt  B.mat  MPC.m  PID.m  Plotter.m  Ship.m  ShipsList.m  Simulator.m  TRex.m  UAV.asv  UAV.m  UAVlist.asv  UAVlist.m  createShips.m  createUAVs.m  extractVector.m  main.asv  main.m  model.mod  model.run  saveFile.asv  saveFile.m  saveToFile.asv  saveToFile.m
lin/mat/transfer/: B
lin/src/: LoadData.cpp  LoadData.h  PathModule.cpp  PathModule.h  PathOptimizing.h  UAVmodel.cpp  UAVmodel.h  Utill.cpp  Utill.h  main.cpp  textProcessing.cpp  textProcessing.h
lin/src/transfer/: B.mat  B.txt
source/: LoadData.h  PathModule.cpp  PathModule.h  UAVmodel.cpp  UAVmodel.h  Utill.cpp  Utill.h  main.cpp  textProcessing.h
source/transfer/: A.mat  A.txt
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  model.run  test.cpp  testF
